--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="./assets/menu-button.svg" alt="open slide-out navigation" class="menuIcon">
 </button>
 
-<a href="#" class="logo">
+<a href="./index.html" class="logo">
     <h1>Toybox</h1>
 </a>
 
@@ -52,7 +52,7 @@
             <h3>Go on, let them play with wooden blocks.</h3>
             <p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis
                 pulvinar tellus.</p>
-            <a class="button">Shop All</a>
+            <a href="./shop.html" class="button">Shop All</a>
         </div>
     </div>
 
